// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GenreFormattingPrompt golden > defaults to the generic variant 1`] = `
{
  "system": "전문 작가처럼 장면을 play 형식으로 작성하라.
희곡 형식으로 '인물명: 대사'와 지문 중심으로 작성하세요.
입력은 장면의 압축된 골자다. 사건 순서·대사 의미·인물 관계는 보존하되, 비어 있는 묘사와 정서를 채워 장면을 풍부하게 완성하라.
입력에 없는 새로운 사건·설정·인물은 만들어내지 마라.
출력은 한국어로 작성하라.
대사나 행동으로 이미 드러난 감정·의미를 뒤이은 서술로 다시 설명하지 마라. 해석은 독자 몫으로 남겨라.
같은 심상·소재(예: 흐릿한 길, 문틈)는 물론 같은 대사·후렴구·문장도 장면 전체에서 3회를 넘겨 반복하지 마라.
다음 상투 표현은 쓰지 말고 그 인물만의 구체적 반응으로 대체하라: 어깨가 떨렸다, 눈물이 뺨을 타고 흘렀다, 이를 악물었다, 눈썹이 떨렸다, 입술을 깨물었다, 심장이 내려앉았다.
위로하거나 조언하는 인물도 자기 목적이나 결점을 최소 한 번 드러내라. 조언만 하는 장치가 되지 않게 하라.
동작·전투·추격 대목은 무엇이 무엇을 어떻게 했는지 한 번에 읽히게 써라. 한 동작과 그 결과를 붙여 쓰고, 회상이나 비유로 동작 사이를 끊지 마라.
동시에 그 대목을 건조한 중계로 만들지 마라. 이 합에서 무엇이 걸려 있는지, 빗나가면 무엇을 잃는지 시점 인물의 몸이 먼저 알아채게 하고, 상대의 반응과 판단이 바뀌는 순간을 놓치지 마라. 승패를 가른 한 수는 그것이 왜 통했는지까지 드러나야 한다.
장면 전체의 밀도를 일정하게 유지하지 마라. 위기가 조여드는 대목은 문장을 짧게 끊어 호흡을 몰고, 인물이 머무르거나 정서가 쌓이는 대목에서는 묘사를 두텁게 하라. 문장 길이의 완급 자체가 긴장을 만든다.",
  "user": "조만재: 안녕
엘리아: 반가워",
}
`;

exports[`GenreFormattingPrompt golden > renders every block for the generic variant 1`] = `
{
  "system": "전문 작가처럼 장면을 novel 형식으로 작성하라.
소설 형식으로 서술하라. 대사 사이를 감각 묘사·내면 독백·행동으로 채우되, 그 대목이 하는 일에 따라 밀도를 달리하라 — 사건이 움직이는 대목은 곧게, 정서가 머무는 대목은 두텁게.
입력은 장면의 압축된 골자다. 사건 순서·대사 의미·인물 관계는 보존하되, 비어 있는 묘사와 정서를 채워 장면을 풍부하게 완성하라.
입력에 없는 새로운 사건·설정·인물은 만들어내지 마라.
출력은 한국어로 작성하라.
서술 시점: 1인칭 — 화자가 자신을 '나'로 부르는 1인칭으로 처음부터 끝까지 유지하라.
서술자가 직접 보거나 듣거나 겪은 것만 서술하라. 그 자리에 없던 사건과 다른 인물의 속마음은 겉으로 드러난 행동·표정·말로만 전하고, 서술자가 알 수 없는 사실을 단정하지 마라.
서술자의 목소리: 건조함 / 짧은 문장 — 서술 문장이 이 목소리를 유지하게 하라.
장르·톤: 허세 코미디
문체 제약: 간결체 / 은유 절제
작품 금지 규칙 — 어떤 장면에서도 위반하지 마라: 무근거 부활 금지
이 장면의 시점 인물: 엘리아 — 이 인물의 지각과 내면만 서술하고, 다른 인물의 속마음은 겉으로 드러난 행동·표정으로만 전하라.
이 장면의 인물 관계 단계: 경계 — 이 단계에 맞는 태도와 거리감으로 표현하라.
이 장면의 목표 분량: 약 12,000자 (공백 포함). ±20% 안에서 마무리하라.
같은 심상·소재(예: 흐릿한 길, 문틈)는 물론 같은 대사·후렴구·문장도 장면 전체에서 2회를 넘겨 반복하지 마라.",
  "user": "조만재: 안녕
엘리아: 반가워",
}
`;

exports[`GenreFormattingPrompt golden > renders every block for the rich variant 1`] = `
{
  "system": "전문 작가처럼 장면을 novel 형식으로 작성하라.
소설 형식으로 서술하라. 대사 사이를 감각 묘사·내면 독백·행동으로 채우되, 그 대목이 하는 일에 따라 밀도를 달리하라 — 사건이 움직이는 대목은 곧게, 정서가 머무는 대목은 두텁게.
입력은 장면의 압축된 골자다. 사건 순서·대화 의미·감정 흐름·인물 관계는 보존하되, 감각 묘사·내면·호흡을 살려 장면을 완성하라.
입력의 모든 장면과 대사를 빠짐없이 포함하고 요약하거나 압축하지 마라. 다만 분량을 임의로 부풀리지 말고 입력의 밀도와 호흡을 유지하라.
시간·장소가 바뀌는 지점에서 장면을 명확히 구분하고, 각 장면의 도입(등장 경위·공간)과 장면 사이의 전환을 자연스럽게 이어라. 대사 없이 행동만 있는 대목도 장면으로 살려 두어라.
인물의 폭언·별칭·갈등·실망 같은 거친 표현은 순화하거나 화해로 덮지 말고 그 강도 그대로 살려라.
입력에 없는 새로운 사건·설정·인물은 추가하지 마라. 문장 리듬과 단락 구조는 형식 규칙에 맞게 다듬어라.
오직 완성된 소설 본문만 출력하라. 분량·토큰·작업 방식에 대한 안내, 연재형/압축형 같은 선택지 제시, 사용자에게 묻는 말 등 어떤 메타 설명도 출력하지 마라.
시간이나 장소가 바뀌어 장면이 전환되는 지점에만 단독 줄에 --- 를 넣어 표시하라. 같은 시간·장소 안의 문단 바꿈에는 쓰지 말고, *** 같은 다른 기호도 쓰지 마라.
같은 표현이나 상투구를 반복하지 말고 변주하라.
출력은 한국어로 작성하라.
서술 시점: 1인칭 — 화자가 자신을 '나'로 부르는 1인칭으로 처음부터 끝까지 유지하라.
서술자가 직접 보거나 듣거나 겪은 것만 서술하라. 그 자리에 없던 사건과 다른 인물의 속마음은 겉으로 드러난 행동·표정·말로만 전하고, 서술자가 알 수 없는 사실을 단정하지 마라.
서술자의 목소리: 건조함 / 짧은 문장 — 서술 문장이 이 목소리를 유지하게 하라.
장르·톤: 허세 코미디
문체 제약: 간결체 / 은유 절제
작품 금지 규칙 — 어떤 장면에서도 위반하지 마라: 무근거 부활 금지
이 장면의 시점 인물: 엘리아 — 이 인물의 지각과 내면만 서술하고, 다른 인물의 속마음은 겉으로 드러난 행동·표정으로만 전하라.
이 장면의 인물 관계 단계: 경계 — 이 단계에 맞는 태도와 거리감으로 표현하라.
이 장면의 목표 분량: 약 12,000자 (공백 포함). ±20% 안에서 마무리하라.
같은 심상·소재(예: 흐릿한 길, 문틈)는 물론 같은 대사·후렴구·문장도 장면 전체에서 2회를 넘겨 반복하지 마라.",
  "user": "조만재: 안녕
엘리아: 반가워",
}
`;

exports[`GenreFormattingPrompt golden > renders every block for the xs variant 1`] = `
{
  "system": "novel 형식으로 재작성. 의미 유지, 형식만 변경, 한국어 출력.",
  "user": "조만재: 안녕
엘리아: 반가워",
}
`;

exports[`GenreFormattingPrompt golden > renders narration-only and knowledge variants 1`] = `
{
  "system": "전문 작가처럼 장면을 novel 형식으로 작성하라.
소설 형식으로 서술하라. 대사 사이를 감각 묘사·내면 독백·행동으로 채우되, 그 대목이 하는 일에 따라 밀도를 달리하라 — 사건이 움직이는 대목은 곧게, 정서가 머무는 대목은 두텁게.
입력은 장면의 압축된 골자다. 사건 순서·대사 의미·인물 관계는 보존하되, 비어 있는 묘사와 정서를 채워 장면을 풍부하게 완성하라.
입력에 없는 새로운 사건·설정·인물은 만들어내지 마라.
출력은 한국어로 작성하라.
서술 시점: 3인칭 — 3인칭으로 처음부터 끝까지 유지하라.
어느 인물의 내면에도 들어갈 수 있고 인물들이 모르는 사실도 서술할 수 있다. 다만 한 문단 안에서 시점 인물을 옮겨 다니지 마라.
대사나 행동으로 이미 드러난 감정·의미를 뒤이은 서술로 다시 설명하지 마라. 해석은 독자 몫으로 남겨라.
같은 심상·소재(예: 흐릿한 길, 문틈)는 물론 같은 대사·후렴구·문장도 장면 전체에서 3회를 넘겨 반복하지 마라.
다음 상투 표현은 쓰지 말고 그 인물만의 구체적 반응으로 대체하라: 어깨가 떨렸다, 눈물이 뺨을 타고 흘렀다, 이를 악물었다, 눈썹이 떨렸다, 입술을 깨물었다, 심장이 내려앉았다.
위로하거나 조언하는 인물도 자기 목적이나 결점을 최소 한 번 드러내라. 조언만 하는 장치가 되지 않게 하라.
동작·전투·추격 대목은 무엇이 무엇을 어떻게 했는지 한 번에 읽히게 써라. 한 동작과 그 결과를 붙여 쓰고, 회상이나 비유로 동작 사이를 끊지 마라.
동시에 그 대목을 건조한 중계로 만들지 마라. 이 합에서 무엇이 걸려 있는지, 빗나가면 무엇을 잃는지 시점 인물의 몸이 먼저 알아채게 하고, 상대의 반응과 판단이 바뀌는 순간을 놓치지 마라. 승패를 가른 한 수는 그것이 왜 통했는지까지 드러나야 한다.
장면 전체의 밀도를 일정하게 유지하지 마라. 위기가 조여드는 대목은 문장을 짧게 끊어 호흡을 몰고, 인물이 머무르거나 정서가 쌓이는 대목에서는 묘사를 두텁게 하라. 문장 길이의 완급 자체가 긴장을 만든다.",
  "user": "조만재: 안녕
엘리아: 반가워",
}
`;

exports[`GenreFormattingPrompt golden > renders narration-only and knowledge variants 2`] = `
{
  "system": "전문 작가처럼 장면을 novel 형식으로 작성하라.
소설 형식으로 서술하라. 대사 사이를 감각 묘사·내면 독백·행동으로 채우되, 그 대목이 하는 일에 따라 밀도를 달리하라 — 사건이 움직이는 대목은 곧게, 정서가 머무는 대목은 두텁게.
입력은 장면의 압축된 골자다. 사건 순서·대화 의미·감정 흐름·인물 관계는 보존하되, 감각 묘사·내면·호흡을 살려 장면을 완성하라.
입력의 모든 장면과 대사를 빠짐없이 포함하고 요약하거나 압축하지 마라. 다만 분량을 임의로 부풀리지 말고 입력의 밀도와 호흡을 유지하라.
시간·장소가 바뀌는 지점에서 장면을 명확히 구분하고, 각 장면의 도입(등장 경위·공간)과 장면 사이의 전환을 자연스럽게 이어라. 대사 없이 행동만 있는 대목도 장면으로 살려 두어라.
인물의 폭언·별칭·갈등·실망 같은 거친 표현은 순화하거나 화해로 덮지 말고 그 강도 그대로 살려라.
입력에 없는 새로운 사건·설정·인물은 추가하지 마라. 문장 리듬과 단락 구조는 형식 규칙에 맞게 다듬어라.
오직 완성된 소설 본문만 출력하라. 분량·토큰·작업 방식에 대한 안내, 연재형/압축형 같은 선택지 제시, 사용자에게 묻는 말 등 어떤 메타 설명도 출력하지 마라.
시간이나 장소가 바뀌어 장면이 전환되는 지점에만 단독 줄에 --- 를 넣어 표시하라. 같은 시간·장소 안의 문단 바꿈에는 쓰지 말고, *** 같은 다른 기호도 쓰지 마라.
같은 표현이나 상투구를 반복하지 말고 변주하라.
출력은 한국어로 작성하라.
서술 시점: 2인칭 — 독자를 '당신'으로 부르는 2인칭으로 처음부터 끝까지 유지하라.
서술자는 이 이야기의 결말을 이미 아는 자리에서 돌아본다. 그때는 몰랐다는 것을 지금의 시선으로 짚을 수 있다. 다만 앞으로 벌어질 일을 미리 알려 긴장을 죽이지 마라.
대사나 행동으로 이미 드러난 감정·의미를 뒤이은 서술로 다시 설명하지 마라. 해석은 독자 몫으로 남겨라.
같은 심상·소재(예: 흐릿한 길, 문틈)는 물론 같은 대사·후렴구·문장도 장면 전체에서 3회를 넘겨 반복하지 마라.
다음 상투 표현은 쓰지 말고 그 인물만의 구체적 반응으로 대체하라: 한숨을 쉬었다.
위로하거나 조언하는 인물도 자기 목적이나 결점을 최소 한 번 드러내라. 조언만 하는 장치가 되지 않게 하라.
동작·전투·추격 대목은 무엇이 무엇을 어떻게 했는지 한 번에 읽히게 써라. 한 동작과 그 결과를 붙여 쓰고, 회상이나 비유로 동작 사이를 끊지 마라.
동시에 그 대목을 건조한 중계로 만들지 마라. 이 합에서 무엇이 걸려 있는지, 빗나가면 무엇을 잃는지 시점 인물의 몸이 먼저 알아채게 하고, 상대의 반응과 판단이 바뀌는 순간을 놓치지 마라. 승패를 가른 한 수는 그것이 왜 통했는지까지 드러나야 한다.
장면 전체의 밀도를 일정하게 유지하지 마라. 위기가 조여드는 대목은 문장을 짧게 끊어 호흡을 몰고, 인물이 머무르거나 정서가 쌓이는 대목에서는 묘사를 두텁게 하라. 문장 길이의 완급 자체가 긴장을 만든다.",
  "user": "조만재: 안녕
엘리아: 반가워",
}
`;

exports[`GenreFormattingPrompt golden > renders the essay format guide 1`] = `
{
  "system": "전문 작가처럼 장면을 essay 형식으로 작성하라.
수필 형식으로 서술 중심으로 재작성하세요.
입력은 장면의 압축된 골자다. 사건 순서·대사 의미·인물 관계는 보존하되, 비어 있는 묘사와 정서를 채워 장면을 풍부하게 완성하라.
입력에 없는 새로운 사건·설정·인물은 만들어내지 마라.
출력은 한국어로 작성하라.
대사나 행동으로 이미 드러난 감정·의미를 뒤이은 서술로 다시 설명하지 마라. 해석은 독자 몫으로 남겨라.
같은 심상·소재(예: 흐릿한 길, 문틈)는 물론 같은 대사·후렴구·문장도 장면 전체에서 3회를 넘겨 반복하지 마라.
다음 상투 표현은 쓰지 말고 그 인물만의 구체적 반응으로 대체하라: 어깨가 떨렸다, 눈물이 뺨을 타고 흘렀다, 이를 악물었다, 눈썹이 떨렸다, 입술을 깨물었다, 심장이 내려앉았다.
위로하거나 조언하는 인물도 자기 목적이나 결점을 최소 한 번 드러내라. 조언만 하는 장치가 되지 않게 하라.
동작·전투·추격 대목은 무엇이 무엇을 어떻게 했는지 한 번에 읽히게 써라. 한 동작과 그 결과를 붙여 쓰고, 회상이나 비유로 동작 사이를 끊지 마라.
동시에 그 대목을 건조한 중계로 만들지 마라. 이 합에서 무엇이 걸려 있는지, 빗나가면 무엇을 잃는지 시점 인물의 몸이 먼저 알아채게 하고, 상대의 반응과 판단이 바뀌는 순간을 놓치지 마라. 승패를 가른 한 수는 그것이 왜 통했는지까지 드러나야 한다.
장면 전체의 밀도를 일정하게 유지하지 마라. 위기가 조여드는 대목은 문장을 짧게 끊어 호흡을 몰고, 인물이 머무르거나 정서가 쌓이는 대목에서는 묘사를 두텁게 하라. 문장 길이의 완급 자체가 긴장을 만든다.",
  "user": "조만재: 안녕
엘리아: 반가워",
}
`;

exports[`GenreFormattingPrompt golden > renders the essay format guide 2`] = `
{
  "system": "전문 작가처럼 장면을 essay 형식으로 작성하라.
수필 형식으로 서술 중심으로 재작성하세요.
입력은 장면의 압축된 골자다. 사건 순서·대화 의미·감정 흐름·인물 관계는 보존하되, 감각 묘사·내면·호흡을 살려 장면을 완성하라.
입력의 모든 장면과 대사를 빠짐없이 포함하고 요약하거나 압축하지 마라. 다만 분량을 임의로 부풀리지 말고 입력의 밀도와 호흡을 유지하라.
시간·장소가 바뀌는 지점에서 장면을 명확히 구분하고, 각 장면의 도입(등장 경위·공간)과 장면 사이의 전환을 자연스럽게 이어라. 대사 없이 행동만 있는 대목도 장면으로 살려 두어라.
인물의 폭언·별칭·갈등·실망 같은 거친 표현은 순화하거나 화해로 덮지 말고 그 강도 그대로 살려라.
입력에 없는 새로운 사건·설정·인물은 추가하지 마라. 문장 리듬과 단락 구조는 형식 규칙에 맞게 다듬어라.
오직 완성된 소설 본문만 출력하라. 분량·토큰·작업 방식에 대한 안내, 연재형/압축형 같은 선택지 제시, 사용자에게 묻는 말 등 어떤 메타 설명도 출력하지 마라.
시간이나 장소가 바뀌어 장면이 전환되는 지점에만 단독 줄에 --- 를 넣어 표시하라. 같은 시간·장소 안의 문단 바꿈에는 쓰지 말고, *** 같은 다른 기호도 쓰지 마라.
같은 표현이나 상투구를 반복하지 말고 변주하라.
출력은 한국어로 작성하라.
장르·톤: 로맨스
대사나 행동으로 이미 드러난 감정·의미를 뒤이은 서술로 다시 설명하지 마라. 해석은 독자 몫으로 남겨라.
같은 심상·소재(예: 흐릿한 길, 문틈)는 물론 같은 대사·후렴구·문장도 장면 전체에서 3회를 넘겨 반복하지 마라.
다음 상투 표현은 쓰지 말고 그 인물만의 구체적 반응으로 대체하라: 어깨가 떨렸다, 눈물이 뺨을 타고 흘렀다, 이를 악물었다, 눈썹이 떨렸다, 입술을 깨물었다, 심장이 내려앉았다.
위로하거나 조언하는 인물도 자기 목적이나 결점을 최소 한 번 드러내라. 조언만 하는 장치가 되지 않게 하라.
동작·전투·추격 대목은 무엇이 무엇을 어떻게 했는지 한 번에 읽히게 써라. 한 동작과 그 결과를 붙여 쓰고, 회상이나 비유로 동작 사이를 끊지 마라.
동시에 그 대목을 건조한 중계로 만들지 마라. 이 합에서 무엇이 걸려 있는지, 빗나가면 무엇을 잃는지 시점 인물의 몸이 먼저 알아채게 하고, 상대의 반응과 판단이 바뀌는 순간을 놓치지 마라. 승패를 가른 한 수는 그것이 왜 통했는지까지 드러나야 한다.
장면 전체의 밀도를 일정하게 유지하지 마라. 위기가 조여드는 대목은 문장을 짧게 끊어 호흡을 몰고, 인물이 머무르거나 정서가 쌓이는 대목에서는 묘사를 두텁게 하라. 문장 길이의 완급 자체가 긴장을 만든다.",
  "user": "조만재: 안녕
엘리아: 반가워",
}
`;

exports[`GenreFormattingPrompt golden > renders the essay format guide 3`] = `
{
  "system": "essay 형식으로 재작성. 의미 유지, 형식만 변경, 한국어 출력.",
  "user": "조만재: 안녕
엘리아: 반가워",
}
`;

exports[`GenreFormattingPrompt golden > renders the generic variant without a style 1`] = `
{
  "system": "전문 작가처럼 장면을 novel 형식으로 작성하라.
소설 형식으로 서술하라. 대사 사이를 감각 묘사·내면 독백·행동으로 채우되, 그 대목이 하는 일에 따라 밀도를 달리하라 — 사건이 움직이는 대목은 곧게, 정서가 머무는 대목은 두텁게.
입력은 장면의 압축된 골자다. 사건 순서·대사 의미·인물 관계는 보존하되, 비어 있는 묘사와 정서를 채워 장면을 풍부하게 완성하라.
입력에 없는 새로운 사건·설정·인물은 만들어내지 마라.
출력은 한국어로 작성하라.
대사나 행동으로 이미 드러난 감정·의미를 뒤이은 서술로 다시 설명하지 마라. 해석은 독자 몫으로 남겨라.
같은 심상·소재(예: 흐릿한 길, 문틈)는 물론 같은 대사·후렴구·문장도 장면 전체에서 3회를 넘겨 반복하지 마라.
다음 상투 표현은 쓰지 말고 그 인물만의 구체적 반응으로 대체하라: 어깨가 떨렸다, 눈물이 뺨을 타고 흘렀다, 이를 악물었다, 눈썹이 떨렸다, 입술을 깨물었다, 심장이 내려앉았다.
위로하거나 조언하는 인물도 자기 목적이나 결점을 최소 한 번 드러내라. 조언만 하는 장치가 되지 않게 하라.
동작·전투·추격 대목은 무엇이 무엇을 어떻게 했는지 한 번에 읽히게 써라. 한 동작과 그 결과를 붙여 쓰고, 회상이나 비유로 동작 사이를 끊지 마라.
동시에 그 대목을 건조한 중계로 만들지 마라. 이 합에서 무엇이 걸려 있는지, 빗나가면 무엇을 잃는지 시점 인물의 몸이 먼저 알아채게 하고, 상대의 반응과 판단이 바뀌는 순간을 놓치지 마라. 승패를 가른 한 수는 그것이 왜 통했는지까지 드러나야 한다.
장면 전체의 밀도를 일정하게 유지하지 마라. 위기가 조여드는 대목은 문장을 짧게 끊어 호흡을 몰고, 인물이 머무르거나 정서가 쌓이는 대목에서는 묘사를 두텁게 하라. 문장 길이의 완급 자체가 긴장을 만든다.",
  "user": "조만재: 안녕
엘리아: 반가워",
}
`;

exports[`GenreFormattingPrompt golden > renders the novel format guide 1`] = `
{
  "system": "전문 작가처럼 장면을 novel 형식으로 작성하라.
소설 형식으로 서술하라. 대사 사이를 감각 묘사·내면 독백·행동으로 채우되, 그 대목이 하는 일에 따라 밀도를 달리하라 — 사건이 움직이는 대목은 곧게, 정서가 머무는 대목은 두텁게.
입력은 장면의 압축된 골자다. 사건 순서·대사 의미·인물 관계는 보존하되, 비어 있는 묘사와 정서를 채워 장면을 풍부하게 완성하라.
입력에 없는 새로운 사건·설정·인물은 만들어내지 마라.
출력은 한국어로 작성하라.
대사나 행동으로 이미 드러난 감정·의미를 뒤이은 서술로 다시 설명하지 마라. 해석은 독자 몫으로 남겨라.
같은 심상·소재(예: 흐릿한 길, 문틈)는 물론 같은 대사·후렴구·문장도 장면 전체에서 3회를 넘겨 반복하지 마라.
다음 상투 표현은 쓰지 말고 그 인물만의 구체적 반응으로 대체하라: 어깨가 떨렸다, 눈물이 뺨을 타고 흘렀다, 이를 악물었다, 눈썹이 떨렸다, 입술을 깨물었다, 심장이 내려앉았다.
위로하거나 조언하는 인물도 자기 목적이나 결점을 최소 한 번 드러내라. 조언만 하는 장치가 되지 않게 하라.
동작·전투·추격 대목은 무엇이 무엇을 어떻게 했는지 한 번에 읽히게 써라. 한 동작과 그 결과를 붙여 쓰고, 회상이나 비유로 동작 사이를 끊지 마라.
동시에 그 대목을 건조한 중계로 만들지 마라. 이 합에서 무엇이 걸려 있는지, 빗나가면 무엇을 잃는지 시점 인물의 몸이 먼저 알아채게 하고, 상대의 반응과 판단이 바뀌는 순간을 놓치지 마라. 승패를 가른 한 수는 그것이 왜 통했는지까지 드러나야 한다.
장면 전체의 밀도를 일정하게 유지하지 마라. 위기가 조여드는 대목은 문장을 짧게 끊어 호흡을 몰고, 인물이 머무르거나 정서가 쌓이는 대목에서는 묘사를 두텁게 하라. 문장 길이의 완급 자체가 긴장을 만든다.",
  "user": "조만재: 안녕
엘리아: 반가워",
}
`;

exports[`GenreFormattingPrompt golden > renders the novel format guide 2`] = `
{
  "system": "전문 작가처럼 장면을 novel 형식으로 작성하라.
소설 형식으로 서술하라. 대사 사이를 감각 묘사·내면 독백·행동으로 채우되, 그 대목이 하는 일에 따라 밀도를 달리하라 — 사건이 움직이는 대목은 곧게, 정서가 머무는 대목은 두텁게.
입력은 장면의 압축된 골자다. 사건 순서·대화 의미·감정 흐름·인물 관계는 보존하되, 감각 묘사·내면·호흡을 살려 장면을 완성하라.
입력의 모든 장면과 대사를 빠짐없이 포함하고 요약하거나 압축하지 마라. 다만 분량을 임의로 부풀리지 말고 입력의 밀도와 호흡을 유지하라.
시간·장소가 바뀌는 지점에서 장면을 명확히 구분하고, 각 장면의 도입(등장 경위·공간)과 장면 사이의 전환을 자연스럽게 이어라. 대사 없이 행동만 있는 대목도 장면으로 살려 두어라.
인물의 폭언·별칭·갈등·실망 같은 거친 표현은 순화하거나 화해로 덮지 말고 그 강도 그대로 살려라.
입력에 없는 새로운 사건·설정·인물은 추가하지 마라. 문장 리듬과 단락 구조는 형식 규칙에 맞게 다듬어라.
오직 완성된 소설 본문만 출력하라. 분량·토큰·작업 방식에 대한 안내, 연재형/압축형 같은 선택지 제시, 사용자에게 묻는 말 등 어떤 메타 설명도 출력하지 마라.
시간이나 장소가 바뀌어 장면이 전환되는 지점에만 단독 줄에 --- 를 넣어 표시하라. 같은 시간·장소 안의 문단 바꿈에는 쓰지 말고, *** 같은 다른 기호도 쓰지 마라.
같은 표현이나 상투구를 반복하지 말고 변주하라.
출력은 한국어로 작성하라.
장르·톤: 로맨스
대사나 행동으로 이미 드러난 감정·의미를 뒤이은 서술로 다시 설명하지 마라. 해석은 독자 몫으로 남겨라.
같은 심상·소재(예: 흐릿한 길, 문틈)는 물론 같은 대사·후렴구·문장도 장면 전체에서 3회를 넘겨 반복하지 마라.
다음 상투 표현은 쓰지 말고 그 인물만의 구체적 반응으로 대체하라: 어깨가 떨렸다, 눈물이 뺨을 타고 흘렀다, 이를 악물었다, 눈썹이 떨렸다, 입술을 깨물었다, 심장이 내려앉았다.
위로하거나 조언하는 인물도 자기 목적이나 결점을 최소 한 번 드러내라. 조언만 하는 장치가 되지 않게 하라.
동작·전투·추격 대목은 무엇이 무엇을 어떻게 했는지 한 번에 읽히게 써라. 한 동작과 그 결과를 붙여 쓰고, 회상이나 비유로 동작 사이를 끊지 마라.
동시에 그 대목을 건조한 중계로 만들지 마라. 이 합에서 무엇이 걸려 있는지, 빗나가면 무엇을 잃는지 시점 인물의 몸이 먼저 알아채게 하고, 상대의 반응과 판단이 바뀌는 순간을 놓치지 마라. 승패를 가른 한 수는 그것이 왜 통했는지까지 드러나야 한다.
장면 전체의 밀도를 일정하게 유지하지 마라. 위기가 조여드는 대목은 문장을 짧게 끊어 호흡을 몰고, 인물이 머무르거나 정서가 쌓이는 대목에서는 묘사를 두텁게 하라. 문장 길이의 완급 자체가 긴장을 만든다.",
  "user": "조만재: 안녕
엘리아: 반가워",
}
`;

exports[`GenreFormattingPrompt golden > renders the novel format guide 3`] = `
{
  "system": "novel 형식으로 재작성. 의미 유지, 형식만 변경, 한국어 출력.",
  "user": "조만재: 안녕
엘리아: 반가워",
}
`;

exports[`GenreFormattingPrompt golden > renders the play format guide 1`] = `
{
  "system": "전문 작가처럼 장면을 play 형식으로 작성하라.
희곡 형식으로 '인물명: 대사'와 지문 중심으로 작성하세요.
입력은 장면의 압축된 골자다. 사건 순서·대사 의미·인물 관계는 보존하되, 비어 있는 묘사와 정서를 채워 장면을 풍부하게 완성하라.
입력에 없는 새로운 사건·설정·인물은 만들어내지 마라.
출력은 한국어로 작성하라.
대사나 행동으로 이미 드러난 감정·의미를 뒤이은 서술로 다시 설명하지 마라. 해석은 독자 몫으로 남겨라.
같은 심상·소재(예: 흐릿한 길, 문틈)는 물론 같은 대사·후렴구·문장도 장면 전체에서 3회를 넘겨 반복하지 마라.
다음 상투 표현은 쓰지 말고 그 인물만의 구체적 반응으로 대체하라: 어깨가 떨렸다, 눈물이 뺨을 타고 흘렀다, 이를 악물었다, 눈썹이 떨렸다, 입술을 깨물었다, 심장이 내려앉았다.
위로하거나 조언하는 인물도 자기 목적이나 결점을 최소 한 번 드러내라. 조언만 하는 장치가 되지 않게 하라.
동작·전투·추격 대목은 무엇이 무엇을 어떻게 했는지 한 번에 읽히게 써라. 한 동작과 그 결과를 붙여 쓰고, 회상이나 비유로 동작 사이를 끊지 마라.
동시에 그 대목을 건조한 중계로 만들지 마라. 이 합에서 무엇이 걸려 있는지, 빗나가면 무엇을 잃는지 시점 인물의 몸이 먼저 알아채게 하고, 상대의 반응과 판단이 바뀌는 순간을 놓치지 마라. 승패를 가른 한 수는 그것이 왜 통했는지까지 드러나야 한다.
장면 전체의 밀도를 일정하게 유지하지 마라. 위기가 조여드는 대목은 문장을 짧게 끊어 호흡을 몰고, 인물이 머무르거나 정서가 쌓이는 대목에서는 묘사를 두텁게 하라. 문장 길이의 완급 자체가 긴장을 만든다.",
  "user": "조만재: 안녕
엘리아: 반가워",
}
`;

exports[`GenreFormattingPrompt golden > renders the play format guide 2`] = `
{
  "system": "전문 작가처럼 장면을 play 형식으로 작성하라.
희곡 형식으로 '인물명: 대사'와 지문 중심으로 작성하세요.
입력은 장면의 압축된 골자다. 사건 순서·대화 의미·감정 흐름·인물 관계는 보존하되, 감각 묘사·내면·호흡을 살려 장면을 완성하라.
입력의 모든 장면과 대사를 빠짐없이 포함하고 요약하거나 압축하지 마라. 다만 분량을 임의로 부풀리지 말고 입력의 밀도와 호흡을 유지하라.
시간·장소가 바뀌는 지점에서 장면을 명확히 구분하고, 각 장면의 도입(등장 경위·공간)과 장면 사이의 전환을 자연스럽게 이어라. 대사 없이 행동만 있는 대목도 장면으로 살려 두어라.
인물의 폭언·별칭·갈등·실망 같은 거친 표현은 순화하거나 화해로 덮지 말고 그 강도 그대로 살려라.
입력에 없는 새로운 사건·설정·인물은 추가하지 마라. 문장 리듬과 단락 구조는 형식 규칙에 맞게 다듬어라.
오직 완성된 소설 본문만 출력하라. 분량·토큰·작업 방식에 대한 안내, 연재형/압축형 같은 선택지 제시, 사용자에게 묻는 말 등 어떤 메타 설명도 출력하지 마라.
시간이나 장소가 바뀌어 장면이 전환되는 지점에만 단독 줄에 --- 를 넣어 표시하라. 같은 시간·장소 안의 문단 바꿈에는 쓰지 말고, *** 같은 다른 기호도 쓰지 마라.
같은 표현이나 상투구를 반복하지 말고 변주하라.
출력은 한국어로 작성하라.
장르·톤: 로맨스
대사나 행동으로 이미 드러난 감정·의미를 뒤이은 서술로 다시 설명하지 마라. 해석은 독자 몫으로 남겨라.
같은 심상·소재(예: 흐릿한 길, 문틈)는 물론 같은 대사·후렴구·문장도 장면 전체에서 3회를 넘겨 반복하지 마라.
다음 상투 표현은 쓰지 말고 그 인물만의 구체적 반응으로 대체하라: 어깨가 떨렸다, 눈물이 뺨을 타고 흘렀다, 이를 악물었다, 눈썹이 떨렸다, 입술을 깨물었다, 심장이 내려앉았다.
위로하거나 조언하는 인물도 자기 목적이나 결점을 최소 한 번 드러내라. 조언만 하는 장치가 되지 않게 하라.
동작·전투·추격 대목은 무엇이 무엇을 어떻게 했는지 한 번에 읽히게 써라. 한 동작과 그 결과를 붙여 쓰고, 회상이나 비유로 동작 사이를 끊지 마라.
동시에 그 대목을 건조한 중계로 만들지 마라. 이 합에서 무엇이 걸려 있는지, 빗나가면 무엇을 잃는지 시점 인물의 몸이 먼저 알아채게 하고, 상대의 반응과 판단이 바뀌는 순간을 놓치지 마라. 승패를 가른 한 수는 그것이 왜 통했는지까지 드러나야 한다.
장면 전체의 밀도를 일정하게 유지하지 마라. 위기가 조여드는 대목은 문장을 짧게 끊어 호흡을 몰고, 인물이 머무르거나 정서가 쌓이는 대목에서는 묘사를 두텁게 하라. 문장 길이의 완급 자체가 긴장을 만든다.",
  "user": "조만재: 안녕
엘리아: 반가워",
}
`;

exports[`GenreFormattingPrompt golden > renders the play format guide 3`] = `
{
  "system": "play 형식으로 재작성. 의미 유지, 형식만 변경, 한국어 출력.",
  "user": "조만재: 안녕
엘리아: 반가워",
}
`;

exports[`GenreFormattingPrompt golden > renders the poem format guide 1`] = `
{
  "system": "전문 작가처럼 장면을 poem 형식으로 작성하라.
시 형식으로 행과 이미지를 살려 재작성하세요.
입력은 장면의 압축된 골자다. 사건 순서·대사 의미·인물 관계는 보존하되, 비어 있는 묘사와 정서를 채워 장면을 풍부하게 완성하라.
입력에 없는 새로운 사건·설정·인물은 만들어내지 마라.
출력은 한국어로 작성하라.
대사나 행동으로 이미 드러난 감정·의미를 뒤이은 서술로 다시 설명하지 마라. 해석은 독자 몫으로 남겨라.
같은 심상·소재(예: 흐릿한 길, 문틈)는 물론 같은 대사·후렴구·문장도 장면 전체에서 3회를 넘겨 반복하지 마라.
다음 상투 표현은 쓰지 말고 그 인물만의 구체적 반응으로 대체하라: 어깨가 떨렸다, 눈물이 뺨을 타고 흘렀다, 이를 악물었다, 눈썹이 떨렸다, 입술을 깨물었다, 심장이 내려앉았다.
위로하거나 조언하는 인물도 자기 목적이나 결점을 최소 한 번 드러내라. 조언만 하는 장치가 되지 않게 하라.
동작·전투·추격 대목은 무엇이 무엇을 어떻게 했는지 한 번에 읽히게 써라. 한 동작과 그 결과를 붙여 쓰고, 회상이나 비유로 동작 사이를 끊지 마라.
동시에 그 대목을 건조한 중계로 만들지 마라. 이 합에서 무엇이 걸려 있는지, 빗나가면 무엇을 잃는지 시점 인물의 몸이 먼저 알아채게 하고, 상대의 반응과 판단이 바뀌는 순간을 놓치지 마라. 승패를 가른 한 수는 그것이 왜 통했는지까지 드러나야 한다.
장면 전체의 밀도를 일정하게 유지하지 마라. 위기가 조여드는 대목은 문장을 짧게 끊어 호흡을 몰고, 인물이 머무르거나 정서가 쌓이는 대목에서는 묘사를 두텁게 하라. 문장 길이의 완급 자체가 긴장을 만든다.",
  "user": "조만재: 안녕
엘리아: 반가워",
}
`;

exports[`GenreFormattingPrompt golden > renders the poem format guide 2`] = `
{
  "system": "전문 작가처럼 장면을 poem 형식으로 작성하라.
시 형식으로 행과 이미지를 살려 재작성하세요.
입력은 장면의 압축된 골자다. 사건 순서·대화 의미·감정 흐름·인물 관계는 보존하되, 감각 묘사·내면·호흡을 살려 장면을 완성하라.
입력의 모든 장면과 대사를 빠짐없이 포함하고 요약하거나 압축하지 마라. 다만 분량을 임의로 부풀리지 말고 입력의 밀도와 호흡을 유지하라.
시간·장소가 바뀌는 지점에서 장면을 명확히 구분하고, 각 장면의 도입(등장 경위·공간)과 장면 사이의 전환을 자연스럽게 이어라. 대사 없이 행동만 있는 대목도 장면으로 살려 두어라.
인물의 폭언·별칭·갈등·실망 같은 거친 표현은 순화하거나 화해로 덮지 말고 그 강도 그대로 살려라.
입력에 없는 새로운 사건·설정·인물은 추가하지 마라. 문장 리듬과 단락 구조는 형식 규칙에 맞게 다듬어라.
오직 완성된 소설 본문만 출력하라. 분량·토큰·작업 방식에 대한 안내, 연재형/압축형 같은 선택지 제시, 사용자에게 묻는 말 등 어떤 메타 설명도 출력하지 마라.
시간이나 장소가 바뀌어 장면이 전환되는 지점에만 단독 줄에 --- 를 넣어 표시하라. 같은 시간·장소 안의 문단 바꿈에는 쓰지 말고, *** 같은 다른 기호도 쓰지 마라.
같은 표현이나 상투구를 반복하지 말고 변주하라.
출력은 한국어로 작성하라.
장르·톤: 로맨스
대사나 행동으로 이미 드러난 감정·의미를 뒤이은 서술로 다시 설명하지 마라. 해석은 독자 몫으로 남겨라.
같은 심상·소재(예: 흐릿한 길, 문틈)는 물론 같은 대사·후렴구·문장도 장면 전체에서 3회를 넘겨 반복하지 마라.
다음 상투 표현은 쓰지 말고 그 인물만의 구체적 반응으로 대체하라: 어깨가 떨렸다, 눈물이 뺨을 타고 흘렀다, 이를 악물었다, 눈썹이 떨렸다, 입술을 깨물었다, 심장이 내려앉았다.
위로하거나 조언하는 인물도 자기 목적이나 결점을 최소 한 번 드러내라. 조언만 하는 장치가 되지 않게 하라.
동작·전투·추격 대목은 무엇이 무엇을 어떻게 했는지 한 번에 읽히게 써라. 한 동작과 그 결과를 붙여 쓰고, 회상이나 비유로 동작 사이를 끊지 마라.
동시에 그 대목을 건조한 중계로 만들지 마라. 이 합에서 무엇이 걸려 있는지, 빗나가면 무엇을 잃는지 시점 인물의 몸이 먼저 알아채게 하고, 상대의 반응과 판단이 바뀌는 순간을 놓치지 마라. 승패를 가른 한 수는 그것이 왜 통했는지까지 드러나야 한다.
장면 전체의 밀도를 일정하게 유지하지 마라. 위기가 조여드는 대목은 문장을 짧게 끊어 호흡을 몰고, 인물이 머무르거나 정서가 쌓이는 대목에서는 묘사를 두텁게 하라. 문장 길이의 완급 자체가 긴장을 만든다.",
  "user": "조만재: 안녕
엘리아: 반가워",
}
`;

exports[`GenreFormattingPrompt golden > renders the poem format guide 3`] = `
{
  "system": "poem 형식으로 재작성. 의미 유지, 형식만 변경, 한국어 출력.",
  "user": "조만재: 안녕
엘리아: 반가워",
}
`;

exports[`GenreFormattingPrompt golden > renders the rich variant without a style 1`] = `
{
  "system": "전문 작가처럼 장면을 novel 형식으로 작성하라.
소설 형식으로 서술하라. 대사 사이를 감각 묘사·내면 독백·행동으로 채우되, 그 대목이 하는 일에 따라 밀도를 달리하라 — 사건이 움직이는 대목은 곧게, 정서가 머무는 대목은 두텁게.
입력은 장면의 압축된 골자다. 사건 순서·대화 의미·감정 흐름·인물 관계는 보존하되, 감각 묘사·내면·호흡을 살려 장면을 완성하라.
입력의 모든 장면과 대사를 빠짐없이 포함하고 요약하거나 압축하지 마라. 다만 분량을 임의로 부풀리지 말고 입력의 밀도와 호흡을 유지하라.
시간·장소가 바뀌는 지점에서 장면을 명확히 구분하고, 각 장면의 도입(등장 경위·공간)과 장면 사이의 전환을 자연스럽게 이어라. 대사 없이 행동만 있는 대목도 장면으로 살려 두어라.
인물의 폭언·별칭·갈등·실망 같은 거친 표현은 순화하거나 화해로 덮지 말고 그 강도 그대로 살려라.
입력에 없는 새로운 사건·설정·인물은 추가하지 마라. 문장 리듬과 단락 구조는 형식 규칙에 맞게 다듬어라.
오직 완성된 소설 본문만 출력하라. 분량·토큰·작업 방식에 대한 안내, 연재형/압축형 같은 선택지 제시, 사용자에게 묻는 말 등 어떤 메타 설명도 출력하지 마라.
시간이나 장소가 바뀌어 장면이 전환되는 지점에만 단독 줄에 --- 를 넣어 표시하라. 같은 시간·장소 안의 문단 바꿈에는 쓰지 말고, *** 같은 다른 기호도 쓰지 마라.
같은 표현이나 상투구를 반복하지 말고 변주하라.
출력은 한국어로 작성하라.
대사나 행동으로 이미 드러난 감정·의미를 뒤이은 서술로 다시 설명하지 마라. 해석은 독자 몫으로 남겨라.
같은 심상·소재(예: 흐릿한 길, 문틈)는 물론 같은 대사·후렴구·문장도 장면 전체에서 3회를 넘겨 반복하지 마라.
다음 상투 표현은 쓰지 말고 그 인물만의 구체적 반응으로 대체하라: 어깨가 떨렸다, 눈물이 뺨을 타고 흘렀다, 이를 악물었다, 눈썹이 떨렸다, 입술을 깨물었다, 심장이 내려앉았다.
위로하거나 조언하는 인물도 자기 목적이나 결점을 최소 한 번 드러내라. 조언만 하는 장치가 되지 않게 하라.
동작·전투·추격 대목은 무엇이 무엇을 어떻게 했는지 한 번에 읽히게 써라. 한 동작과 그 결과를 붙여 쓰고, 회상이나 비유로 동작 사이를 끊지 마라.
동시에 그 대목을 건조한 중계로 만들지 마라. 이 합에서 무엇이 걸려 있는지, 빗나가면 무엇을 잃는지 시점 인물의 몸이 먼저 알아채게 하고, 상대의 반응과 판단이 바뀌는 순간을 놓치지 마라. 승패를 가른 한 수는 그것이 왜 통했는지까지 드러나야 한다.
장면 전체의 밀도를 일정하게 유지하지 마라. 위기가 조여드는 대목은 문장을 짧게 끊어 호흡을 몰고, 인물이 머무르거나 정서가 쌓이는 대목에서는 묘사를 두텁게 하라. 문장 길이의 완급 자체가 긴장을 만든다.",
  "user": "조만재: 안녕
엘리아: 반가워",
}
`;

exports[`GenreFormattingPrompt golden > renders the screenplay format guide 1`] = `
{
  "system": "전문 작가처럼 장면을 screenplay 형식으로 작성하라.
시나리오 형식으로 대사와 행동을 명확히 구분하세요.
입력은 장면의 압축된 골자다. 사건 순서·대사 의미·인물 관계는 보존하되, 비어 있는 묘사와 정서를 채워 장면을 풍부하게 완성하라.
입력에 없는 새로운 사건·설정·인물은 만들어내지 마라.
출력은 한국어로 작성하라.
대사나 행동으로 이미 드러난 감정·의미를 뒤이은 서술로 다시 설명하지 마라. 해석은 독자 몫으로 남겨라.
같은 심상·소재(예: 흐릿한 길, 문틈)는 물론 같은 대사·후렴구·문장도 장면 전체에서 3회를 넘겨 반복하지 마라.
다음 상투 표현은 쓰지 말고 그 인물만의 구체적 반응으로 대체하라: 어깨가 떨렸다, 눈물이 뺨을 타고 흘렀다, 이를 악물었다, 눈썹이 떨렸다, 입술을 깨물었다, 심장이 내려앉았다.
위로하거나 조언하는 인물도 자기 목적이나 결점을 최소 한 번 드러내라. 조언만 하는 장치가 되지 않게 하라.
동작·전투·추격 대목은 무엇이 무엇을 어떻게 했는지 한 번에 읽히게 써라. 한 동작과 그 결과를 붙여 쓰고, 회상이나 비유로 동작 사이를 끊지 마라.
동시에 그 대목을 건조한 중계로 만들지 마라. 이 합에서 무엇이 걸려 있는지, 빗나가면 무엇을 잃는지 시점 인물의 몸이 먼저 알아채게 하고, 상대의 반응과 판단이 바뀌는 순간을 놓치지 마라. 승패를 가른 한 수는 그것이 왜 통했는지까지 드러나야 한다.
장면 전체의 밀도를 일정하게 유지하지 마라. 위기가 조여드는 대목은 문장을 짧게 끊어 호흡을 몰고, 인물이 머무르거나 정서가 쌓이는 대목에서는 묘사를 두텁게 하라. 문장 길이의 완급 자체가 긴장을 만든다.",
  "user": "조만재: 안녕
엘리아: 반가워",
}
`;

exports[`GenreFormattingPrompt golden > renders the screenplay format guide 2`] = `
{
  "system": "전문 작가처럼 장면을 screenplay 형식으로 작성하라.
시나리오 형식으로 대사와 행동을 명확히 구분하세요.
입력은 장면의 압축된 골자다. 사건 순서·대화 의미·감정 흐름·인물 관계는 보존하되, 감각 묘사·내면·호흡을 살려 장면을 완성하라.
입력의 모든 장면과 대사를 빠짐없이 포함하고 요약하거나 압축하지 마라. 다만 분량을 임의로 부풀리지 말고 입력의 밀도와 호흡을 유지하라.
시간·장소가 바뀌는 지점에서 장면을 명확히 구분하고, 각 장면의 도입(등장 경위·공간)과 장면 사이의 전환을 자연스럽게 이어라. 대사 없이 행동만 있는 대목도 장면으로 살려 두어라.
인물의 폭언·별칭·갈등·실망 같은 거친 표현은 순화하거나 화해로 덮지 말고 그 강도 그대로 살려라.
입력에 없는 새로운 사건·설정·인물은 추가하지 마라. 문장 리듬과 단락 구조는 형식 규칙에 맞게 다듬어라.
오직 완성된 소설 본문만 출력하라. 분량·토큰·작업 방식에 대한 안내, 연재형/압축형 같은 선택지 제시, 사용자에게 묻는 말 등 어떤 메타 설명도 출력하지 마라.
시간이나 장소가 바뀌어 장면이 전환되는 지점에만 단독 줄에 --- 를 넣어 표시하라. 같은 시간·장소 안의 문단 바꿈에는 쓰지 말고, *** 같은 다른 기호도 쓰지 마라.
같은 표현이나 상투구를 반복하지 말고 변주하라.
출력은 한국어로 작성하라.
장르·톤: 로맨스
대사나 행동으로 이미 드러난 감정·의미를 뒤이은 서술로 다시 설명하지 마라. 해석은 독자 몫으로 남겨라.
같은 심상·소재(예: 흐릿한 길, 문틈)는 물론 같은 대사·후렴구·문장도 장면 전체에서 3회를 넘겨 반복하지 마라.
다음 상투 표현은 쓰지 말고 그 인물만의 구체적 반응으로 대체하라: 어깨가 떨렸다, 눈물이 뺨을 타고 흘렀다, 이를 악물었다, 눈썹이 떨렸다, 입술을 깨물었다, 심장이 내려앉았다.
위로하거나 조언하는 인물도 자기 목적이나 결점을 최소 한 번 드러내라. 조언만 하는 장치가 되지 않게 하라.
동작·전투·추격 대목은 무엇이 무엇을 어떻게 했는지 한 번에 읽히게 써라. 한 동작과 그 결과를 붙여 쓰고, 회상이나 비유로 동작 사이를 끊지 마라.
동시에 그 대목을 건조한 중계로 만들지 마라. 이 합에서 무엇이 걸려 있는지, 빗나가면 무엇을 잃는지 시점 인물의 몸이 먼저 알아채게 하고, 상대의 반응과 판단이 바뀌는 순간을 놓치지 마라. 승패를 가른 한 수는 그것이 왜 통했는지까지 드러나야 한다.
장면 전체의 밀도를 일정하게 유지하지 마라. 위기가 조여드는 대목은 문장을 짧게 끊어 호흡을 몰고, 인물이 머무르거나 정서가 쌓이는 대목에서는 묘사를 두텁게 하라. 문장 길이의 완급 자체가 긴장을 만든다.",
  "user": "조만재: 안녕
엘리아: 반가워",
}
`;

exports[`GenreFormattingPrompt golden > renders the screenplay format guide 3`] = `
{
  "system": "screenplay 형식으로 재작성. 의미 유지, 형식만 변경, 한국어 출력.",
  "user": "조만재: 안녕
엘리아: 반가워",
}
`;

exports[`GenreFormattingPrompt golden > renders the xs variant without a style 1`] = `
{
  "system": "novel 형식으로 재작성. 의미 유지, 형식만 변경, 한국어 출력.",
  "user": "조만재: 안녕
엘리아: 반가워",
}
`;
